@@ -126,26 +126,37 @@
 
   // The default encoding that is assumed for DICOM files without
   // "SpecificCharacterSet" DICOM tag, and that is used when answering
-  // C-Find requests (including worklists). The allowed values are
+  // C-FIND requests (including worklists). The allowed values are
   // "Ascii", "Utf8", "Latin1", "Latin2", "Latin3", "Latin4",
   // "Latin5", "Cyrillic", "Windows1251", "Arabic", "Greek", "Hebrew",
   // "Thai", "Japanese", "Chinese", "JapaneseKanji", "Korean", and
   // "SimplifiedChinese".
   "DefaultEncoding" : "Latin1",
 
-  // The transfer syntaxes that are accepted by Orthanc C-Store SCP
-  "DeflatedTransferSyntaxAccepted"     : true,
-  "JpegTransferSyntaxAccepted"         : true,
-  "Jpeg2000TransferSyntaxAccepted"     : true,
-  "JpegLosslessTransferSyntaxAccepted" : true,
-  "JpipTransferSyntaxAccepted"         : true,
-  "Mpeg2TransferSyntaxAccepted"        : true,
-  "RleTransferSyntaxAccepted"          : true,
-  "Mpeg4TransferSyntaxAccepted"        : true,  // New in Orthanc 1.6.0
+  // The transfer syntaxes that are accepted by Orthanc C-STORE SCP.
+  // This is an array listing the accepted transfer syntax UIDs. Each
+  // entry can contain wildcards ("?" or "*"). By default, all the
+  // known transfer syntaxes are accepted. (new in Orthanc 1.9.0)
+  "AcceptedTransferSyntaxes" : [ "1.2.840.10008.1.*" ],
 
-  // Whether Orthanc accepts to act as C-Store SCP for unknown storage
+  // User-friendly groups of transfer syntaxes that can be enabled or
+  // disabled at once. These options are applied after the main
+  // "AcceptedTransferSyntaxes" option has been applied (if present).
+  /**
+     "DeflatedTransferSyntaxAccepted"     : true,
+     "JpegTransferSyntaxAccepted"         : true,
+     "Jpeg2000TransferSyntaxAccepted"     : true,
+     "JpegLosslessTransferSyntaxAccepted" : true,
+     "JpipTransferSyntaxAccepted"         : true,
+     "Mpeg2TransferSyntaxAccepted"        : true,
+     "RleTransferSyntaxAccepted"          : true,
+     "Mpeg4TransferSyntaxAccepted"        : true,  // New in Orthanc 1.6.0
+     "H265TransferSyntaxAccepted"         : true,  // New in Orthanc 1.9.0
+  **/
+  
+  // Whether Orthanc accepts to act as C-STORE SCP for unknown storage
   // SOP classes (aka. "promiscuous mode")
-  "UnknownSopClassAccepted"            : false,
+  "UnknownSopClassAccepted" : false,
 
   // Set the timeout (in seconds) after which the DICOM associations
   // are closed by the Orthanc SCP (server) if no further DIMSE
@@ -250,13 +261,13 @@
      "DicomTlsTrustedCertificates" : "trusted.crt",
   **/
   
-  // Whether the Orthanc SCP allows incoming C-Echo requests, even
+  // Whether the Orthanc SCP allows incoming C-ECHO requests, even
   // from SCU modalities it does not know about (i.e. that are not
   // listed in the "DicomModalities" option above). Orthanc 1.3.0
   // is the only version to behave as if this argument was set to "false".
   "DicomAlwaysAllowEcho" : true,
 
-  // Whether the Orthanc SCP allows incoming C-Store requests, even
+  // Whether the Orthanc SCP allows incoming C-STORE requests, even
   // from SCU modalities it does not know about (i.e. that are not
   // listed in the "DicomModalities" option above)
   "DicomAlwaysAllowStore" : true,
@@ -294,9 +305,9 @@
      * specific PACS manufacturers. The allowed values are currently:
      * - "Generic" (default value),
      * - "GenericNoWildcardInDates" (to replace "*" by "" in date fields 
-     *   in outgoing C-Find requests originating from Orthanc),
+     *   in outgoing C-FIND requests originating from Orthanc),
      * - "GenericNoUniversalWildcard" (to replace "*" by "" in all fields
-     *   in outgoing C-Find SCU requests originating from Orthanc),
+     *   in outgoing C-FIND SCU requests originating from Orthanc),
      * - "Vitrea",
      * - "GE" (Enterprise Archive, MRI consoles and Advantage Workstation
      *   from GE Healthcare).
@@ -540,7 +551,7 @@
   // deleted as new requests are issued.
   "QueryRetrieveSize" : 100,
 
-  // When handling a C-Find SCP request, setting this flag to "true"
+  // When handling a C-FIND SCP request, setting this flag to "true"
   // will enable case-sensitive match for PN value representation
   // (such as PatientName). By default, the search is
   // case-insensitive, which does not follow the DICOM standard.
@@ -584,13 +595,13 @@
     // "2001,5f" : [ "SQ", "StackSequence", 1, 1, "Philips Imaging DD 001" ]
   },
 
-  // Whether to run DICOM C-Move operations synchronously. If set to
-  // "false" (asynchronous mode), each incoming C-Move request results
+  // Whether to run DICOM C-MOVE operations synchronously. If set to
+  // "false" (asynchronous mode), each incoming C-MOVE request results
   // in the creation of a new background job. Up to Orthanc 1.3.2, the
-  // implicit behavior was to use synchronous C-Move ("true"). Between
+  // implicit behavior was to use synchronous C-MOVE ("true"). Between
   // Orthanc 1.4.0 and 1.4.2, the default behavior was set to
-  // asynchronous C-Move ("false"). Since Orthanc 1.5.0, the default
-  // behavior is back to synchronous C-Move ("true", which ensures
+  // asynchronous C-MOVE ("false"). Since Orthanc 1.5.0, the default
+  // behavior is back to synchronous C-MOVE ("true", which ensures
   // backward compatibility with Orthanc <= 1.3.2).
   "SynchronousCMove" : true,
 
@@ -722,8 +733,8 @@
   // Orthanc <= 1.8.1.
   "MallocArenaMax" : 5,
 
-  // Deidentify/anonymize the contents of the logs (notably C-Find,
-  // C-Get, and C-Move queries submitted to Orthanc) according to
+  // Deidentify/anonymize the contents of the logs (notably C-FIND,
+  // C-GET, and C-MOVE queries submitted to Orthanc) according to
   // Table E.1-1 of the DICOM standard (new in Orthanc 1.8.2)
   "DeidentifyLogs" : true,
 
